// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API analytics request contract > ZPublicApiAnalyticsFunnelQuery keeps its published shape > ZPublicApiAnalyticsFunnelQuery 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "courseId": {
      "format": "uuid",
      "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
      "type": "string",
    },
    "days": {
      "default": 30,
      "maximum": 365,
      "minimum": 1,
      "type": "integer",
    },
  },
  "type": "object",
}
`;

exports[`public API analytics request contract > ZPublicApiAnalyticsRangeQuery keeps its published shape > ZPublicApiAnalyticsRangeQuery 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "days": {
      "default": 30,
      "maximum": 365,
      "minimum": 1,
      "type": "integer",
    },
  },
  "type": "object",
}
`;

exports[`public API analytics request contract > ZPublicApiLearnerAnalyticsParam keeps its published shape > ZPublicApiLearnerAnalyticsParam 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "profileId": {
      "format": "uuid",
      "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$",
      "type": "string",
    },
  },
  "required": [
    "profileId",
  ],
  "type": "object",
}
`;

exports[`public API analytics request contract > ZPublicApiLoginActivityQuery keeps its published shape > ZPublicApiLoginActivityQuery 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "days": {
      "default": 90,
      "maximum": 365,
      "minimum": 1,
      "type": "integer",
    },
  },
  "type": "object",
}
`;
